@@ -1,0 +1,22 @@
+#define DEVICE_OUTPUT      0
+#define DEVICE_KEYBOARD    1
+#define DEVICE_FLOATS      2
+#define DEVICE_FILES       4
+#define DEVICE_BLOCKS      3
+#define DEVICE_CLOCK       5
+#define DEVICE_RESERVED6   6
+#define DEVICE_SOCKET      7
+#define DEVICE_UNIX        8
+#define DEVICE_SCRIPTING   9
+#define DEVICE_RNG         10
+#define DEVICE_RESERVED11  11
+#define DEVICE_RESERVED12  12
+#define DEVICE_RESERVED13  13
+#define DEVICE_RESERVED14  14
+#define DEVICE_MALLOC      15
+
+#define DEVICE_IMAGE       1000
+#define DEVICE_ERROR       1234
+#define DEVICE_MULTICORE   8000
+#define DEVICE_FFI         8100
+#define DEVICE_UNSIGNED    8101
