@@ -51,5 +51,6 @@
 - remove need to lookup & call err:notfound by nga-c
 - use C preprocessor to help with readability in arg. processing
 - remove separate temp. string buffer in `s:dedup`
+- use constants for device identifiers in nga-c
 
 ================================================================
